// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should render properly with danger variant 1`] = `
<div>
  <div
    class="sc-gsTCUz jkvztz"
  >
    <div
      class="sc-dlfnbm itJtYk"
    >
      <div
        class="sc-hKgILt kAJtzc"
        title="Title"
      >
        <span
          class="sc-bdfBwQ fUCFve"
        >
          Title
        </span>
      </div>
      <div
        class="sc-eCssSg cplufu"
      >
        <span
          class="sc-bdfBwQ cgybgC"
        >
          Message
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with info variant 1`] = `
<div>
  <div
    class="sc-gsTCUz jkvztz"
  >
    <div
      class="sc-dlfnbm bCUHwQ"
    >
      <div
        class="sc-hKgILt hQuvCu"
        title="Title"
      >
        <span
          class="sc-bdfBwQ iXOscd"
        >
          Title
        </span>
      </div>
      <div
        class="sc-eCssSg cplufu"
      >
        <span
          class="sc-bdfBwQ iZBcUF"
        >
          Message
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with success variant 1`] = `
<div>
  <div
    class="sc-gsTCUz jkvztz"
  >
    <div
      class="sc-dlfnbm dHuCCP"
    >
      <div
        class="sc-hKgILt jtWZok"
        title="Title"
      >
        <span
          class="sc-bdfBwQ inOvKW"
        >
          Title
        </span>
      </div>
      <div
        class="sc-eCssSg cplufu"
      >
        <span
          class="sc-bdfBwQ dqWXDy"
        >
          Message
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with warning variant 1`] = `
<div>
  <div
    class="sc-gsTCUz jkvztz"
  >
    <div
      class="sc-dlfnbm bPWpZv"
    >
      <div
        class="sc-hKgILt kCLPXp"
        title="Title"
      >
        <span
          class="sc-bdfBwQ jfvasr"
        >
          Title
        </span>
      </div>
      <div
        class="sc-eCssSg cplufu"
      >
        <span
          class="sc-bdfBwQ kQPiZj"
        >
          Message
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Toast should render title and message text 1`] = `
<div>
  <div
    class="sc-gsTCUz jkvztz"
  >
    <div
      class="sc-dlfnbm dHuCCP"
    >
      <div
        class="sc-hKgILt jtWZok"
        title="Title"
      >
        <span
          class="sc-bdfBwQ inOvKW"
        >
          Title
        </span>
      </div>
      <div
        class="sc-eCssSg cplufu"
      >
        <span
          class="sc-bdfBwQ dqWXDy"
        >
          Message
        </span>
      </div>
    </div>
  </div>
</div>
`;
